fix: color contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,7 +60,7 @@
         --muted: 0 0% 14.9%;
         --muted-foreground: 0 0% 63.9%;
 
-        --accent: 0 0% 9.9%;
+        --accent: 0 0% 14%;
         --accent-foreground: 0 0% 98%;
 
         --destructive: 0 62.8% 30.6%;
